--- a/wp-content/themes/prospective/assets/styles/common/_global.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_global.scss
@@ -1,4 +1,4 @@
 header.banner {
-    background: #7BAFD4;
-    height: 400px;
+    background: linear-gradient(#fff, #7BAFD4);
+    height: 100px;
 }
