--- a/wp-content/themes/prospective/assets/styles/common/_global.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_global.scss
@@ -1,4 +1,32 @@
 header.banner {
+    background: -webkit-linear-gradient(#fff, #7BAFD4);
+    background: -o-linear-gradient(#fff, #7BAFD4);
     background: linear-gradient(#fff, #7BAFD4);
-    height: 100px;
+    margin-bottom: 20px;
+
+    .main-header {
+        height: 110px;
+
+        a.unc {
+            float: right;
+            img {
+                height: 100px;
+            }
+        }
+    }
+
+    nav.nav-primary {
+        background: #235d86;
+        padding: 10px;
+        height: 50px;
+        box-shadow: inset 0 0 10px -5px #000;
+
+        div.menu-nav-container>ul>li {
+            display: inline-block;
+            padding: 0 5px;
+            margin: 0 5px;
+        }
+    }
 }
+
+
