--- a/wp-content/themes/prospective/assets/styles/common/_variables.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_variables.scss
@@ -4,4 +4,4 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #27ae60;
+$brand-primary:         #7BAFD4;
