--- a/wp-content/themes/prospective/assets/styles/common/_global.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_global.scss
@@ -12,7 +12,9 @@ header.banner {
 
             &.brand {
                 float: left;
-                
+                img {
+                    height: 100px;
+                }
             }
 
             &.unc {
