Header flexbox; Heading font; Footer

--- a/wp-content/themes/prospective/assets/styles/main.scss
+++ b/wp-content/themes/prospective/assets/styles/main.scss
@@ -1,5 +1,7 @@
 @import "common/variables";
 
+@import 'https://fonts.googleapis.com/css?family=Slabo+27px';
+
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 @import "../../bower_components/bootstrap/scss/bootstrap.scss";
