--- a/wp-content/themes/prospective/assets/styles/common/_global.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_global.scss
@@ -1,54 +1,3 @@
-header.banner {
-    background: -webkit-linear-gradient(#fff, #7BAFD4);
-    background: -o-linear-gradient(#fff, #7BAFD4);
-    background: linear-gradient(#fff, #7BAFD4);
-    margin-bottom: 20px;
-
-    .main-header {
-        height: 110px;
-
-        a {
-            display: block;
-
-            &.brand {
-                float: left;
-                img {
-                    height: 100px;
-                }
-            }
-
-            &.unc {
-                float: right;
-                img {
-                    height: 100px;
-                }
-            }
-        }
-    }
-
-    nav.nav-primary {
-        background: #235d86;
-        height: 50px;
-        box-shadow: inset 0 0 10px -5px #000;
-
-        div.menu-nav-container>ul>li {
-            display: inline-block;
-            height: 50px;
-
-            a {
-                display: inline-block;
-                height: 50px;
-                padding: 0px 10px;
-                line-height: 49px;
-
-                &:hover {
-                    background: #286998;
-                    color: #fff;
-                    text-decoration: none;
-                }
-            }
-        }
-    }
+h1 {
+    font-family: 'Slabo 27px', serif;
 }
-
-
