--- a/wp-content/themes/prospective/assets/styles/common/_variables.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_variables.scss
@@ -5,3 +5,5 @@ $sidebar-sm-columns:    4;
 
 // Colors
 $brand-primary:         #7BAFD4;
+$heelBlue:              #7BAFD4;
+$darkBlue:              #235d86;
