--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -1,34 +1,32 @@
 header.banner {
-    background: -webkit-linear-gradient(#fff, #7BAFD4);
-    background: -o-linear-gradient(#fff, #7BAFD4);
-    background: linear-gradient(#fff, #7BAFD4);
+    background: linear-gradient(lighten($heelBlue, 80%), lighten($heelBlue, 20%));
     margin-bottom: 20px;
 
     .main-header {
         height: 110px;
-        display:flex;
-        align-items:center;
-        justify-content:space-between;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
 
         a {
             display: block;
 
             &.brand {                
                 img {
-                    height: 100px;
+                    height: 95px;
                 }
             }
 
             &.unc {
                 img {
-                    height: 100px;
+                    height: 65px;
                 }
             }
         }
     }
 
     nav.nav-primary {
-        background: #235d86;
+        background: $darkBlue;
         height: 50px;
         box-shadow: inset 0 0 10px -5px #000;
 
@@ -37,14 +35,15 @@ header.banner {
             height: 50px;
 
             a {
+                color: lighten($heelBlue, 40%);
                 display: inline-block;
                 height: 50px;
                 padding: 0px 10px;
                 line-height: 49px;
+                transition: background 0.2s linear;
 
                 &:hover {
-                    background: #286998;
-                    color: #fff;
+                    background: lighten($darkBlue, 5%);
                     text-decoration: none;
                 }
             }
