--- a/wp-content/themes/prospective/assets/styles/main.scss
+++ b/wp-content/themes/prospective/assets/styles/main.scss
@@ -1,6 +1,6 @@
 @import "common/variables";
 
-@import 'https://fonts.googleapis.com/css?family=Slabo+27px';
+@import 'https://fonts.googleapis.com/css?family=Open+Sans|Slabo+27px';
 
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
