--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -14,7 +14,7 @@ header.banner {
 
             &.brand {                
                 img {
-                    height: 95px;
+                    height: 90px;
                 }
             }
 
@@ -31,26 +31,33 @@ header.banner {
         height: 50px;
         box-shadow: inset 0 0 10px -5px #000;
 
-        div.menu-nav-container>ul>li {
+        div.menu-nav-container>ul#menu-nav>li {
             display: inline-block;
             height: 50px;
 
             &.current-menu-item>a{
-                background: lighten($darkBlue, 4%);
+                background: lighten($darkBlue, 3.5%);
             }
 
             a {
                 color: lighten($heelBlue, 40%);
+                text-shadow: 0px 0px 2px lighten(#000, 7%);
                 display: inline-block;
                 height: 50px;
                 padding: 0px 12px;
                 line-height: 49px;
                 transition: background 0.2s ease;
+                transition: box-shadow 0.2s ease;
 
                 &:hover {
                     background: lighten($darkBlue, 5%);
+                    box-shadow: inset 0px 0px 10px -5px lighten(#000, 10%);
                     text-decoration: none;
                 }
+            }
+
+            &>ul.sub-menu {
+                display: none;
             }
         }
     }
@@ -62,7 +69,7 @@ div.slider {
     align-items: stretch;
     justify-content: space-between;
     box-shadow: 0 0 1px #555;
-    margin-top: 30px;
+    margin-top: -20px;
 
     img {
         width: 70%; 
@@ -101,10 +108,11 @@ div.slider {
 }
 
 div#news {
-    background: lighten($darkBlue, 5%);
-    color: #fff;
+    background: lighten($darkBlue, 60%);
+    color: #000;
+    box-shadow: inset 0 0 15px -10px #000;
     width: 100%;
-    height: 100px;
-    padding: 10px;
+    height: 140px;
+    padding: 20px;
     margin-bottom: 20px;
 }
