--- a/wp-content/themes/prospective/assets/styles/common/_global.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_global.scss
@@ -1,7 +1,18 @@
-body {
+html, body {
     font-family: 'Open Sans', sans-serif;
+    height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Slabo 27px', serif;
+}
+
+div.wrap {
+    min-height: 100%;
+    margin-bottom: -200px;
+    &:after {
+        content: "";
+        display: block;
+        height: 200px;
+    }
 }
