--- a/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
@@ -1,12 +1,35 @@
 body.page-template-template-guide {
     main.main {
         ol {
+            list-style-type: none;
+            padding: 0;
+
             li {
-                color: $heelBlue;
-                margin: 15px 0;
-                span {
-                    color: rgb(68, 68, 68);
+                margin: 50px 0;
+                margin-left: 7rem;
+                min-height: 5rem;
+                display: block;
+                counter-increment: custom;
+
+                &:before {
+                    background: lighten($heelBlue, 31%);
+                    content: counter(custom) " ";
+                    color: $heelBlue;
+                    font-size: 2.5rem;
+                    font-weight: bold;
+                    position: absolute;
+                    left: 1rem;
+                    width: 5rem;
+                    height: 5rem;
+                    border-radius: 2.5rem;
+                    text-align: center;
+                    line-height: 4.9rem;
+                    vertical-align: middle;
+                    box-shadow: inset 0 0 6px -3px lighten(#000, 50%);
                 }
+            }
+            &:first-child {
+                counter-reset: custom;
             }
         }
     }
