--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -98,7 +98,7 @@ div.slider {
     aside {
         background: darken($heelBlue, 5%);
         color: #fff;
-        width: 30%;
+        width: 35%;
         padding: 25px;
         box-shadow: inset 0 0 15px -10px #000;
         position: relative;
@@ -136,4 +136,37 @@ div#news {
     height: 140px;
     padding: 20px;
     margin-bottom: 20px;
+
+    div.container {
+        display: flex;
+
+        div {
+            width: 300px;
+            height: 140px;
+            padding: 0px 20px;
+            flex: 1;
+            position: relative;
+            p {
+                font-size: 85%;
+            }
+            &>a {
+                background: lighten($darkBlue, 50%);
+                color: $darkBlue;
+                display: block;
+                position: absolute;
+                height: 30px;
+                padding: 10px;
+                border-radius: 2px;
+                bottom: 30px;
+                right: 0;
+                transition: background 0.2s ease;
+                line-height: 14px;
+
+                &:hover {
+                    background: lighten($darkBlue, 45%);
+                    text-decoration: none;
+                }
+            }
+        }
+    }
 }
