Add download button; Style adjustments

--- a/wp-content/themes/prospective/assets/styles/common/_variables.scss
+++ b/wp-content/themes/prospective/assets/styles/common/_variables.scss
@@ -7,3 +7,4 @@ $sidebar-sm-columns:    4;
 $brand-primary:         #7BAFD4;
 $heelBlue:              #7BAFD4;
 $darkBlue:              #235d86;
+$green:                 #149361;
