--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -66,7 +66,6 @@ header.banner {
             &>ul.sub-menu {
                 background: rgba(lighten($darkBlue, 10%), 0.9);
                 position: absolute;
-                display: none;
                 list-style-type: none;
                 padding: 0;
                 min-width: 250px;
@@ -98,7 +97,7 @@ div.slider {
     aside {
         background: darken($heelBlue, 5%);
         color: #fff;
-        width: 35%;
+        width: 30%;
         padding: 25px;
         box-shadow: inset 0 0 15px -10px #000;
         position: relative;
@@ -107,24 +106,38 @@ div.slider {
             margin-bottom: 20px;
         }
 
-        a.more {
-            background: $darkBlue;
-            color: lighten($heelBlue, 40%);
-            font-weight: bold;
-            display: block;
-            float: right;
-            padding: 10px;
-            transition: background 0.2s ease;
-            border-radius: 2px;
+        div.buttons {
             position: absolute;
             bottom: 25px;
             right: 25px;
 
-            &:hover {
-                background: lighten($darkBlue, 5%);
-                text-decoration: none;
+            a {
+                &.more {
+                    background: $darkBlue;
+                    &:hover {
+                        background: lighten($darkBlue, 5%);
+                        text-decoration: none;
+                    }
+                }
+
+                &.download {
+                    background: $green;
+                    margin-right: 10px;
+                    &:hover {
+                        background: lighten($green, 5%);
+                        text-decoration: none;
+                    }
+                }
+                
+                color: lighten($heelBlue, 40%);
+                font-weight: bold;
+                display: block;
+                float: right;
+                padding: 10px;
+                transition: background 0.2s ease;
+                border-radius: 2px;  
             }
-        }
+        }  
     }
 }
 
@@ -134,7 +147,7 @@ div#news {
     box-shadow: inset 0 0 15px -10px #000;
     width: 100%;
     height: 140px;
-    padding: 20px;
+    padding: 10px;
     margin-bottom: 20px;
 
     div.container {
@@ -150,20 +163,21 @@ div#news {
                 font-size: 85%;
             }
             &>a {
-                background: lighten($darkBlue, 50%);
+                background: lighten($darkBlue, 55%);
                 color: $darkBlue;
                 display: block;
                 position: absolute;
                 height: 30px;
                 padding: 10px;
                 border-radius: 2px;
-                bottom: 30px;
+                bottom: 25px;
                 right: 0;
                 transition: background 0.2s ease;
-                line-height: 14px;
+                line-height: 10px;
+                text-align: center;
 
                 &:hover {
-                    background: lighten($darkBlue, 45%);
+                    background: lighten($darkBlue, 53%);
                     text-decoration: none;
                 }
             }
