Nav submenu and footer styles

--- a/wp-content/themes/prospective/assets/styles/layouts/_footer.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_footer.scss
@@ -1,4 +1,7 @@
 footer.content-info {
     background: linear-gradient(#fff, #eee);
-    height: 200px;
+    color: #777;
+    font-size: .9rem;
+    height: 75px;
+    padding-top: 25px;
 }
