--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -94,6 +94,7 @@ div.slider {
     
     div.carousel {
         width: 70%;
+        max-height: 432px;
         overflow: hidden;
 
         img {
@@ -105,6 +106,7 @@ div.slider {
         background: darken($heelBlue, 5%);
         color: #fff;
         width: 30%;
+        max-height: 432px;
         padding: 25px;
         box-shadow: inset 0 0 15px -10px #000;
         position: relative;
