--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -99,7 +99,7 @@ header.banner {
         }
 
         div.menu-nav-container>ul#menu-nav>li {
-            //display: inline-block;
+            display: inline-block;
             height: 50px;
 
             &.current-menu-item>a{
