--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -16,14 +16,13 @@ $brand_width: 252px;
     .nav-primary {
       box-shadow: none !important;
       display: none;
-      height: inherit;
     }
   }
 }
 
 @media(min-width: $breakpoint) {
   .mobile_nav {
-    display: none !important;
+    //display: none !important;
   }
 }
 
@@ -69,6 +68,30 @@ header.banner {
           line-height: 49px;
           cursor: pointer;
         }
+    }
+
+    #mobile_menu:focus  {
+      background: red;
+    }
+
+    input[type=checkbox] {
+    	position: absolute;
+    	top: -9999px;
+    	left: -9999px;
+    }
+
+    label {
+    	display: block;
+    	background: #08C;
+    	padding: 5px;
+    	border: 1px solid rgba(0,0,0,.1);
+    	border-radius: 2px;
+    	color: white;
+    	font-weight: bold;
+    }
+
+    input[type=checkbox]:checked ~ .to-be-changed {
+    	color: red;
     }
 
     nav.nav-primary {
