Responsive styling for the main page

--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -16,6 +16,23 @@ $brand_width: 252px;
     .nav-primary {
       box-shadow: none !important;
       display: none;
+      height: auto !important;
+    }
+
+    div.menu-nav-container>ul#menu-nav>li {
+      display: block !important;
+    }
+  }
+
+  div.slider {
+    display: block !important;
+
+    div.carousel {
+      width: 100% !important;
+    }
+
+    aside {
+      width: 100% !important;
     }
   }
 }
