--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -41,6 +41,28 @@ $brand_width: 252px;
   .mobile_nav {
     display: none !important;
   }
+
+  div#news {
+    height: 140px;
+
+    div.container {
+        display: flex;
+
+        div {
+            flex: 1;
+            position: relative;
+            width: 300px;
+            height: 140px;
+            padding: 0px 5px 20px !important;
+
+            &>a {
+                position: absolute;
+                bottom: 25px;
+                right: 0;
+            }
+        }
+    }
+  }
 }
 
 header.banner {
@@ -216,19 +238,15 @@ div#news {
     color: #000;
     box-shadow: inset 0 0 15px -10px #000;
     width: 100%;
-    height: 140px;
     padding: 10px;
     margin-bottom: 20px;
 
     div.container {
-        display: flex;
 
         div {
-            width: 300px;
-            height: 140px;
-            padding: 0px 20px;
-            flex: 1;
-            position: relative;
+            width: 100%;
+            padding: 0 0 10px;
+        
             p {
                 font-size: 85%;
             }
@@ -236,12 +254,9 @@ div#news {
                 background: lighten($darkBlue, 55%);
                 color: $darkBlue;
                 display: block;
-                position: absolute;
                 height: 30px;
                 padding: 10px;
                 border-radius: 2px;
-                bottom: 25px;
-                right: 0;
                 transition: background 0.2s ease;
                 line-height: 10px;
                 text-align: center;
