Changed witdh of aside to fixed width

--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -168,7 +168,7 @@ div.slider {
     aside {
         background: darken($heelBlue, 5%);
         color: #fff;
-        width: 30%;
+        width: 475px;
         max-height: 432px;
         padding: 25px;
         box-shadow: inset 0 0 15px -10px #000;
