--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -188,6 +188,16 @@ div.slider {
         max-height: 432px;
         overflow: hidden;
 
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: inset 0 0 15px -10px #000;
+        }
+
         img {
             width: 100%;
         }
