--- a/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
@@ -34,3 +34,21 @@ body.page-template-template-guide {
         }
     }
 }
+
+body.page-template-template-faq {
+  main.main {
+    h2 {
+      background-color: $heelBlue;
+      padding: 10px 10px 10px 10px;
+      border-style: solid;
+      border-color: blue;
+      border-width: 2px;
+      border-radius: 5px;
+      //TODO: finish h2 styles
+    }
+
+    p {
+      //TODO: add p styles
+    }
+  }
+}
