--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -29,6 +29,14 @@ $brand_width: 252px;
   .mobile_nav {
     display: none !important;
   }
+  div.slider {
+    
+    max-height: 432px;
+    overflow: hidden;
+    aside {
+        max-height: 432px;
+    }
+  }
 }
 
 @media(max-width: 1095px) {
@@ -175,8 +183,6 @@ header.banner {
 
 div.slider {
     width: 100%;
-    max-height: 432px;
-    overflow: hidden;
     display: flex;
     align-items: stretch;
     justify-content: space-between;
@@ -207,13 +213,17 @@ div.slider {
         background: darken($heelBlue, 5%);
         color: #fff;
         width: 475px;
-        max-height: 432px;
+        height: auto;
         padding: 25px;
         box-shadow: inset 0 0 15px -10px #000;
         position: relative;
 
         h1 {
             margin-bottom: 20px;
+        }
+
+        p {
+            margin-bottom: 60px;
         }
 
         div.buttons {
