--- a/wp-content/themes/prospectiveprod/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospectiveprod/assets/styles/layouts/_header.scss
@@ -23,7 +23,15 @@ $brand_width: 252px;
       display: block !important;
     }
   }
+}
 
+@media(min-width: $breakpoint + 1) {
+  .mobile_nav {
+    display: none !important;
+  }
+}
+
+@media(max-width: 1095px) {
   div.slider {
     display: block !important;
 
@@ -40,6 +48,28 @@ $brand_width: 252px;
 @media(min-width: $breakpoint + 1) {
   .mobile_nav {
     display: none !important;
+  }
+
+  div#news {
+    height: 140px;
+
+    div.container {
+        display: flex;
+
+        div {
+            flex: 1;
+            position: relative;
+            width: 300px;
+            height: 140px;
+            padding: 0px 5px 20px !important;
+
+            &>a {
+                position: absolute;
+                bottom: 25px;
+                right: 0;
+            }
+        }
+    }
   }
 }
 
@@ -158,6 +188,16 @@ div.slider {
         max-height: 432px;
         overflow: hidden;
 
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            box-shadow: inset 0 0 20px -10px #000;
+        }
+
         img {
             width: 100%;
         }
@@ -166,7 +206,7 @@ div.slider {
     aside {
         background: darken($heelBlue, 5%);
         color: #fff;
-        width: 30%;
+        width: 475px;
         max-height: 432px;
         padding: 25px;
         box-shadow: inset 0 0 15px -10px #000;
@@ -216,19 +256,15 @@ div#news {
     color: #000;
     box-shadow: inset 0 0 15px -10px #000;
     width: 100%;
-    height: 140px;
     padding: 10px;
     margin-bottom: 20px;
 
     div.container {
-        display: flex;
 
         div {
-            width: 300px;
-            height: 140px;
-            padding: 0px 20px;
-            flex: 1;
-            position: relative;
+            width: 100%;
+            padding: 0 0 10px;
+        
             p {
                 font-size: 85%;
             }
@@ -236,12 +272,9 @@ div#news {
                 background: lighten($darkBlue, 55%);
                 color: $darkBlue;
                 display: block;
-                position: absolute;
                 height: 30px;
                 padding: 10px;
                 border-radius: 2px;
-                bottom: 25px;
-                right: 0;
                 transition: background 0.2s ease;
                 line-height: 10px;
                 text-align: center;
