Header style update

--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -84,7 +84,6 @@ $brand_width: 252px;
 header.banner {
     background: linear-gradient(lighten($heelBlue, 80%), lighten($heelBlue, 20%));
     border-bottom: 4px solid $heelBlue;
-    margin-bottom: 20px;
 
     .main-header {
         height: 110px;
@@ -187,7 +186,6 @@ div.slider {
     align-items: stretch;
     justify-content: space-between;
     box-shadow: 0 0 1px #555;
-    margin-top: -20px;
 
     div.carousel {
         width: 70%;
@@ -267,7 +265,6 @@ div#news {
     box-shadow: inset 0 0 15px -10px #000;
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px;
 
     div.container {
 
@@ -295,5 +292,19 @@ div#news {
                 }
             }
         }
+    }
+}
+
+div.page-header {
+    background: #f9f9f9;
+    padding: 20px 0;
+    margin-bottom: 30px;
+    border-bottom: 1px solid #dedede;
+    box-shadow: 0 0 10px -8px #000;
+
+    h1 {
+        color: $darkBlue;
+        font-size: 2.55rem;
+        margin: 0;
     }
 }
