--- a/wp-content/themes/prospectiveprod/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/prospectiveprod/assets/styles/layouts/_pages.scss
@@ -1,3 +1,15 @@
+body {
+    div.page-header {
+            margin-bottom: 30px;
+            border-bottom: 2px dotted #ddd;
+            padding-bottom: 5px;
+
+            h1 {
+                color: $darkBlue;
+            }
+        }
+}
+
 body.page-template-template-guide {
     main.main {
         ol {
@@ -33,4 +45,22 @@ body.page-template-template-guide {
             }
         }
     }
+}
+
+body.page-template-template-faq {
+  main.main {
+    h2 {
+      background-color: $heelBlue;
+      padding: 10px 10px 10px 10px;
+      border-style: solid;
+      border-color: blue;
+      border-width: 2px;
+      border-radius: 5px;
+      //TODO: finish h2 styles
+    }
+
+    p {
+      //TODO: add p styles
+    }
+  }
 }
