--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -265,6 +265,7 @@ div#news {
     box-shadow: inset 0 0 15px -10px #000;
     width: 100%;
     padding: 10px;
+    margin-bottom: 20px;
 
     div.container {
 
