FAQ Page Template and script

--- a/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
@@ -51,16 +51,17 @@ body.page-template-template-faq {
   main.main {
     h2 {
       background-color: $heelBlue;
-      padding: 10px 10px 10px 10px;
-      border-style: solid;
-      border-color: blue;
+      padding: 15px;
       border-width: 2px;
       border-radius: 5px;
-      //TODO: finish h2 styles
+      box-shadow: inset 0px 0px 15px -5px #000;
+      cursor: pointer;
     }
 
     p {
-      //TODO: add p styles
+        display: none;
+        font-size: 1.2rem;
+        margin-left: 20px;
     }
   }
 }
