--- a/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_pages.scss
@@ -46,10 +46,11 @@ body.page-template-template-faq {
       cursor: pointer;
     }
 
-    p {
+    div {
         display: none;
         font-size: 1.2rem;
         margin-left: 20px;
+        padding-bottom: 10px;
     }
   }
 }
