--- a/wp-content/themes/prospectiveprod/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospectiveprod/assets/styles/layouts/_header.scss
@@ -59,7 +59,7 @@ $brand_width: 252px;
   }
 
   div#news {
-    height: 140px;
+    height: 180px;
 
     div.container {
         display: flex;
@@ -69,7 +69,7 @@ $brand_width: 252px;
             position: relative;
             width: 300px;
             height: 140px;
-            padding: 0px 5px 20px !important;
+            padding: 0px 10px 20px !important;
 
             &>a {
                 position: absolute;
@@ -272,6 +272,17 @@ div#news {
         div {
             width: 100%;
             padding: 0 0 10px;
+
+            h5 {
+                a {
+                    color: $darkBlue;
+                    text-decoration: underline;
+
+                    &:hover {
+                        text-decoration: none;
+                    }
+                }
+            }
         
             p {
                 font-size: 85%;
