--- a/wp-content/themes/prospective/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospective/assets/styles/layouts/_header.scss
@@ -37,27 +37,6 @@ $brand_width: 252px;
         max-height: 432px;
     }
   }
-}
-
-@media(max-width: 1095px) {
-  div.slider {
-    display: block !important;
-
-    div.carousel {
-      width: 100% !important;
-    }
-
-    aside {
-      width: 100% !important;
-    }
-  }
-}
-
-@media(min-width: $breakpoint + 1) {
-  .mobile_nav {
-    display: none !important;
-  }
-
   div#news {
     height: 180px;
 
@@ -68,8 +47,9 @@ $brand_width: 252px;
             flex: 1;
             position: relative;
             width: 300px;
-            height: 140px;
-            padding: 0px 10px 20px !important;
+            height: 160px;
+            overflow: scroll;
+            padding: 0px 10px !important;
 
             &>a {
                 position: absolute;
@@ -77,6 +57,21 @@ $brand_width: 252px;
                 right: 0;
             }
         }
+    }
+  }
+}
+
+@media(max-width: 1095px) {
+  div.slider {
+    display: block !important;
+    max-height: none !important;
+
+    div.carousel {
+      width: 100% !important;
+    }
+
+    aside {
+      width: 100% !important;
     }
   }
 }
