--- a/wp-content/themes/prospectiveprod/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/prospectiveprod/assets/styles/layouts/_header.scss
@@ -277,6 +277,7 @@ div#news {
                 a {
                     color: $darkBlue;
                     text-decoration: underline;
+                    font-weight: bold;
 
                     &:hover {
                         text-decoration: none;
